--- a/style.css
+++ b/style.css
@@ -33,6 +33,12 @@ input,select{vertical-align:middle}
 	background: rgba(0, 0, 0, 0.8);
     box-shadow: 0px 0px 5px -1px black;
     z-index: 99999;
+    color: white;
+    font-size: 14px;
+}
+
+a{
+    color: rgb(92, 92, 143);
 }
 
 .apple{
@@ -41,9 +47,90 @@ input,select{vertical-align:middle}
     align-items: center;
     justify-content: center;
     margin-left: 5px;
+    float: left;
+    cursor: pointer;
 }
 
 .apple:hover{
+    background-color: rgb(45, 107, 223);
+}
+
+h3{
+    margin: 0 auto;
+    font-weight: bold;
+}
+
+.baropts{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5px;
+    float: left;
+    line-height: 0px;
+    color: white;
+    padding-left: 9px;
+    padding-right: 9px;
+    cursor: pointer;
+}
+
+.baropts:hover{
+    background-color: rgb(45, 107, 223);
+}
+
+
+/* do this for each dropdown blitzy */
+#barslot0:hover + #finder{
+    visibility: visible;
+}
+#finder:hover{
+    visibility: visible;
+}
+#finder{
+    margin-left: 50px;
+    visibility: hidden;
+}
+
+
+/* do this for each dropdown blitzy */
+#barslot-1:hover + #appledropdown{
+    visibility: visible;
+}
+#appledropdown:hover{
+    visibility: visible;
+}
+#appledropdown{
+    margin-left: 5px;
+    visibility: hidden;
+}
+
+
+
+.dropdown{
+    position: absolute;
+	background: rgba(0, 0, 0, 0.5);
+    margin-top: 25px;
+    border-radius: 3px;
+    padding: 12px;
+    width: 150px;
+    padding-bottom: 14px;
+}
+
+
+li {
+    border-radius: 3px;
+    list-style-type: none;
+    width: 147px;
+    padding: 2px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    margin: -10px;
+    margin-top: -8px;
+    cursor: pointer;
+}
+
+li:hover {
     background-color: rgb(45, 107, 223);
 }
 
@@ -100,7 +187,7 @@ h1{
 	display: none;
 }
 .window.fullSizeWindow {
-    top: 0 !important;
+    top: 25px !important;
     right: 0 !important;
     left: 0 !important;
     border-radius: 0;
@@ -454,5 +541,6 @@ h4{
 /*Demo styles BEGIN*/
 #window0 {	top: 20px;	left: 200px;}
 #window1 {	top: 60px;	left: 240px;}
+#window2 {	top: 460px;	left: 210px;}
 #window0 .wincontent {	width: 500px; height: 100px;	}
-#window1 .wincontent {	width: 460px; height: 100px;  min-width: 450px; min-height: 100px;	}
+#window1 .wincontent {	width: 460px; height: 300px;  min-width: 460px; min-height: 300px;	}
