--- a/style.css
+++ b/style.css
@@ -75,6 +75,48 @@ h3{
     background-color: rgb(45, 107, 223);
 }
 
+.baroptsright{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+    float: right;
+    width: 15px;
+    line-height: 0px;
+    color: white;
+    padding-left: 9px;
+    padding-right: 9px;
+    cursor: pointer;
+}
+
+.baroptsright:hover{
+    background-color: rgb(45, 107, 223);
+}
+
+.righticos{
+    width: 15px;
+}
+
+
+.baroptsright2{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+    float: right;
+    line-height: 0px;
+    color: white;
+    padding-left: 9px;
+    padding-right: 9px;
+    cursor: pointer;
+}
+
+.baroptsright2:hover{
+    background-color: rgb(45, 107, 223);
+}
+
 
 /* do this for each dropdown blitzy */
 #barslot0:hover + #finder{
@@ -125,6 +167,19 @@ li {
     padding-left: 20px;
     margin: -10px;
     margin-top: -8px;
+    cursor: pointer;
+}
+
+.licont {
+    border-radius: 3px;
+    list-style-type: none;
+    width: 147px;
+    padding: 2px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    margin: -10px;
+    margin-top: 13px;
     cursor: pointer;
 }
 
@@ -442,27 +497,47 @@ h1{
 #icons {
 	position: absolute;
 	z-index: 10;
-	top: 20px;
-	left: 20px;
+	top: 30px;
+    right: 10px;
 }
 #icons a {
     display: block;
     cursor: pointer;
-    padding: 2px 10px;
+    padding: 10px;
+    width: 80px;
+    margin: 5px;
+    color: white;
+  height: 95px;
+
 }
-#icons a:hover {
-	background: #000;
-	color: #FFF;
+#icons img {
+    width: 50px;
+    height: 50px;
+    margin: -5px 10px 0px;
+    color: white;
+    object-fit: contain;
+    pointer-events: none;
+    padding: 5px;
+    border-radius: 2px;
 }
-#templateLink {
-    position: absolute;
-    display: inline-block;
-    bottom: 10px;
-    right: 20px;
-    font-weight: bold;
-    font-size: 15px;
-    color: #30478c;
+#icons p {
+    text-align: center;
+    text-shadow: 0px 0px 6px black;
+    padding: 5px;
+    margin-top: 2px;
+    border-radius: 5px;
+    display: block;
 }
+
+.clickedicon{
+    box-shadow: 0px 0px 3px 0px white;
+}
+.clickediconp{
+    background-color: rgb(64, 64, 240);
+    color: white;
+}
+
+
 
 .warnico{
     width: 95px;
@@ -502,6 +577,38 @@ h4{
     float: left;
 }
 
+
+.webjave{
+    width: 160px;
+    margin: 40px 20px 40px;
+    float: left;
+}
+
+.aboutus{
+    float: left;
+    margin: 45px 0px 0px;
+    line-height: 8px;
+}
+
+.aboutbutton{
+    width: 125px;
+    float: left;
+    padding: 2px;
+}
+.aboutbutton:nth-child(10){
+    margin-left: 10px;
+}
+
+.copyright{
+    width: 500px;
+    opacity: 0.2;
+    font-size: 13px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+}
+
+
 .moveout{
     animation: moveout 1s forwards;
 }
@@ -533,8 +640,79 @@ h4{
 @keyframes fullscreenslideout {
     to{
 
+
     }
 }
+
+
+#context-menu {
+    font-family: 'SF Pro Display';
+    position: fixed;
+    z-index: 10000;
+    width: 150px;
+	background: rgba(41, 41, 41, 0.7);
+    border-radius: 5px;
+    display: none;
+    z-index: 999;
+    padding: 13px;
+    padding-bottom: 15px;
+  }
+  
+  #context-menu.visible {
+    display: block;
+  }
+  
+  #context-menu .item:hover {
+    background: #343434;
+  }
+
+
+  #context-menu .item:first-child {
+    margin-top: -8px;
+}
+
+  #context-menu .item {
+    border-radius: 3px;
+    list-style-type: none;
+    width: 147px;
+    padding: 2px;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    margin: -10px;
+    margin-top: 11px;
+    margin-bottom: 9px;
+    cursor: pointer;
+}
+
+#context-menu .item:last-child{
+    border-radius: 3px;
+    list-style-type: none;
+    width: 147px;
+    padding: 2px;
+    color: white;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 20px;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    cursor: pointer;
+}
+
+#context-menu .item:hover {
+    background-color: rgb(45, 107, 223);
+}
+
+#context-menu .itemcont:hover {
+    background-color: rgb(45, 107, 223);
+}
+
+
+
+
+
+
 /*Demo styles BEGIN*/
 #window0 {	top: 20px;	left: 200px;}
 #window1 {	top: 60px;	left: 240px;}
